# aoc2024

./: .gitignore  AOC.hs
day1/: day1.hs
day10/: MyLib.hs  day10.cabal
day11/: MyLib.hs  day11.cabal
day2/: day2.hs
day3/: Main.hs  MyLib.hs  day3.cabal
day4/: MyLib.hs  day4.cabal  input.txt
day5/: Main.hs  MyLib.hs  day5.cabal  testinput.txt
day6/: MyLib.hs  day6.cabal
day7/: MyLib.hs  day7.cabal
day8/: MyLib.hs  day8.cabal  input.txt
day9/: MyLib.hs  day9.cabal
