cabal-version:       2.4
name:                day11
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Doc Andrew
maintainer:          jonfandrew@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     MyLib
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.17.2.1, regex-posix, split, unordered-containers, hashable, histogram-simple
  -- hs-source-dirs:
  default-language:    Haskell2010

executable day11
  main-is:             Main.hs
  other-modules:       MyLib
--   ghc-options:         -O2
  -- other-extensions:
  build-depends:       base ^>=4.17.2.1, day11, regex-posix, split, unordered-containers, hashable, histogram-simple
  -- hs-source-dirs:
  default-language:    Haskell2010
